@@ -3,7 +3,7 @@ account.email = "awemud@localhost"
 account.passphrase = "$1$tNUNjzkD$F.tONxYNdR8hpYwuekqr7/"
 account.character = "Admin"
 account.created = "2000-01-01 00:00:00"
-account.lastlogin = "2006-09-30 02:14:52"
+account.lastlogin = "2006-12-26 18:29:02"
 account.access = "gm"
 account.access = "admin"
 account.access = "builder"
