@@ -1,2 +1,2 @@
-time.current = "0839/05/07 07.1916"
+time.current = "0839/05/07 07.2629"
 # vim: set shiftwidth=2 tabstop=2 expandtab:
